# yield-curve-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  yield-curve-lab.cabal
input/: bonds.csv
scripts/: build_curve_csv.py  generate_bonds_csv.py
src/: CLI.hs  Domain.hs  Report.hs
src/Curve/: Build.hs
src/Data/: ECB.hs
src/Pricing/: Bond.hs
src/Risk/: Measures.hs
test/: BondSpec.hs  CurveBuildSpec.hs  CurveSpec.hs  GoldenSpec.hs  ReportSpec.hs  RiskSpec.hs  Spec.hs
test/golden/: analytics_expected.csv
